# background_subtraction_opencv

./: CMakeLists.txt  backgroundsubtract.cpp  method_compare.cpp
