cmake_minimum_required(VERSION 2.8)
project(backgroundsubtract)
find_package(OpenCV REQUIRED)
include_directories(${OpenCV_INCLUDE_DIRS})
add_executable(backgroundsubtract backgroundsubtract.cpp)
add_executable(method_compare method_compare.cpp)
target_Link_Libraries(backgroundsubtract ${OpenCV_LIBS})
target_Link_Libraries(method_compare ${OpenCV_LIBS})